web/static/style.css
/* ... */
.fullscreenOrFit {
    width: 100%;
    height: 100vh;

    @media (max-width: 1024px) {
        width: fit-content;
    }
    @media (max-height: 800px) {
        height: fit-content;
    }
}

.fitArticleWidth {
  width: 50%;

  @media (max-width: 1300px) {
      width: fit-content;
  }
}

.header-link {
  text-decoration: none;
  font-size: large;
  font-weight: 600;
  color: #ffffff;
  margin: 6px;
}

.header-link:hover {
  color: #006fee;
}

.footer-link {
  text-decoration: none;
  font-weight: 500;
  color: var(--ir-inputText-hover-color);
  margin-left: 12px;
  margin-right: 12px;
}

.footer-link:hover {
  color: #006fee;
}

.card-frame {
  border: 1px solid var(--ir-border-color);
  border-radius: 6px;
  display: flex;
  align-items: stretch;
}

a, .mat-card-title {
  text-decoration: none;
  font-weight: 600;
}

/* Unvisited link */
a:link {
  color: #ffffff;
}
/* Visited link */
a:visited {
  color: #ffffff;
}
/* Mouse over link */
a:hover {
  color: #006fee;
}
/* Selected link (active) */
a:active {
  color: #006fee;
}

